종속성 초기화 및 재설치

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,4 +3,4 @@ nodeLinker: pnp
 yarnPath: .yarn/releases/yarn-4.0.1.cjs
 
 enableGlobalCache: false
-cacheFolder: ./.yarn/cache
+cacheFolder: .yarn/cache
