--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: "16"
 
       - name: Install Dependencies
-        run: yarn Install
+        run: yarn install
 
       - name: Run Lint
         run: yarn lint
