--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cache Dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: .yarn/cache
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
@@ -20,21 +20,29 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "18"
 
-      - name: Check for Cached Dependencies
-        id: cache-check
+      - name: Check for Cached .yarn/cache
+        id: yarn-cache-check
         run: |
           if [ -d .yarn/cache ]; then
-            echo "Cache found!"
-            echo "cache-hit=true" >> $GITHUB_ENV
+            echo "Yarn Cache found!"
+            echo "yarn-cache-hit=true" >> $GITHUB_ENV
           fi
 
       - name: Install Dependencies
-        if: steps.cache-check.outputs.cache-hit != 'true'
-        run: yarn install
+        run: |
+          if [ ${{ env.yarn-cache-hit }} != 'true' ]; then
+            echo "Installing all dependencies..."
+            yarn install
+          else
+            echo "Restoring .yarn/cache from cache..."
+            # .yarn/cache 종속성들은 캐싱
+            # .yarn/unplugged 의존성은 항상 설치
+            yarn install --immutable
+          fi
 
       - name: Run Lint
         run: yarn lint
