--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.2",
     "axios": "^1.6.1",
+    "classnames": "^2.3.2",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
