--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,53 +1,21 @@
-name: Preview
-
-on: pull_request
-
+name: GitHub Actions Vercel Preview Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+on:
+  push:
+    branches-ignore:
+      - main
 jobs:
-  build-and-preview:
-    name: Preview
+  Deploy-Preview:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Cache .yarn/cache Directory
-        uses: actions/cache@v3
-        with:
-          path: .yarn/cache
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Check for Cached .yarn/cache
-        id: yarn-cache-check
-        run: |
-          if [ -d .yarn/cache ]; then
-            echo "Yarn Cache found!"
-            echo "yarn-cache-hit=true" >> $GITHUB_ENV
-          fi
-
-      - name: Install Dependencies
-        run: |
-          if [ ${{ env.yarn-cache-hit }} != 'true' ]; then
-            echo "Installing all dependencies..."
-            yarn install
-          else
-            echo "Restoring .yarn/cache from cache..."
-            yarn install --immutable
-          fi
-
-      - name: Run Build
-        run: yarn build
-
-      - name: Vercel Deployment
-        uses: vercel/action@20.0.0
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Vercel 토큰을 GitHub Secrets에 설정하세요.
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Vercel Organization ID를 GitHub Secrets에 설정하세요.
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # Vercel Project ID를 GitHub Secrets에 설정하세요.
-        env:
-          VERCEL_ENV: preview
+      - uses: actions/checkout@v3
+      - name: Install Vercel CLI
+        run: npm install --global vercel@canary
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
