--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
+    "typescript": "5.2.2",
     "vercel": "^32.6.1"
   },
   "packageManager": "yarn@3.6.4"
