종속성 checksum update 설정

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,5 @@
 cacheFolder: .yarn/cache
-
 enableGlobalCache: false
-
 nodeLinker: pnp
-
 yarnPath: .yarn/releases/yarn-3.6.4.cjs
+checksumBehavior: "update"
