useQuery return hook 작성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,10 @@
     ],
     "paths": {
       "@/*": ["src"],
+      "@app/*": ["src/app/*"],
       "@api/*": ["src/api/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@common/*": ["src/common/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
