--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
-    "classnames": "^2.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "storybook": "^7.6.4"
+    "storybook": "^7.6.4",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.0.1",
+    "clsx": "^2.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
