--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-kakao-maps-sdk": "^1.1.24",
+    "react-naver-maps": "^0.1.3",
     "storybook": "^7.6.4",
     "tailwind-merge": "^2.1.0"
   },
@@ -37,7 +37,6 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "kakao.maps.d.ts": "^0.1.39",
     "postcss": "^8",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
