--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-kakao-maps-sdk": "^1.1.24",
