--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-kakao-maps-sdk": "^1.1.24",
